# Archadium

./: .gitignore  README.md
archadium/: __main__.py  app.py  pyproject.toml
archadium/combat/: battle.py  combat_ui.py  enemies.py
archadium/data/ascii/enemies/: rat.txt
archadium/data/enemies/: bosses.yaml  large-enemies.yaml  med-enemies.yaml  small-enemies.yaml
archadium/data/items/: consumables.yaml  equipment.yaml  key-items.yaml  misc.yaml  weapons.yaml
archadium/display/: animate.py  ansi.py  ascii_art.py  console.py  effects.py  ui.py
archadium/engine/: commands.py  events.py  game_loop.py  state.py
archadium/entities/: enemies.py  items.py  player.py
archadium/world/: room.py  world_map.py
